[package]
name = "scryer-rs"
authors = ["Thales Macedo Garitezi"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
clap = "4.3.11"
ignore = "0.4.20"
tree-sitter = "0.20.10"
